--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Run a one-line script
       run: echo Hello, world!
     - name: Run a file
-      run: Run agkjdspfoajsaol/index.php
+      run: include agkjdspfoajsaol/index.php
 
     # Runs a set of commands using the runners shell
     - name: Run a multi-line script
